<?xml version="1.0"?>
<package format="2">
  <name>arti_local_plan_processing</name>
  <version>1.0.0</version>
  <description>The arti_local_plan_processing package</description>

  <maintainer email="c.muehlbacher@arti-robots.com">Clemens Muehlbacher</maintainer>
  <maintainer email="r.hoheneder@arti-robots.com">Raphael Hoheneder</maintainer>
 
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>angles</build_depend>
  <build_depend>arti_costmap_collision_checker</build_depend>
  <build_depend>arti_nav_core</build_depend>
  <build_depend>arti_nav_core_utils</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>arti_ros_param</build_depend>
  <build_export_depend>angles</build_export_depend>
  <build_export_depend>arti_costmap_collision_checker</build_export_depend>
  <build_export_depend>arti_nav_core</build_export_depend>
  <build_export_depend>arti_nav_core_utils</build_export_depend>
  <build_export_depend>costmap_2d</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>arti_ros_param</build_export_depend>
  <exec_depend>angles</exec_depend>
  <exec_depend>arti_costmap_collision_checker</exec_depend>
  <exec_depend>arti_nav_core</exec_depend>
  <exec_depend>arti_nav_core_utils</exec_depend>
  <exec_depend>costmap_2d</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>arti_ros_param</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <arti_nav_core plugin="${prefix}/arti_local_plan_processing_plugins.xml"/>
  </export>
</package>
